店舗情報のテキストを追加

--- a/index.html
+++ b/index.html
@@ -116,24 +116,30 @@
 
     <section id="access">
       <div>
-        <h2></h2>
+        <h2>店舗情報</h2>
         <div>
           <div>
             <dl>
-              <dt></dt>
-              <dd></dd>
+              <dt>店名</dt>
+              <dd>sunday flower</dd>
 
-              <dt></dt>
-              <dd></dd>
+              <dt>営業時間</dt>
+              <dd>10時～18時半</dd>
 
-              <dt></dt>
-              <dd></dd>
+              <dt>定休日</dt>
+              <dd>年末年始及びお盆明け</dd>
 
-              <dt></dt>
-              <dd></dd>
+              <dt>住所</dt>
+              <dd>
+                〒160-0005 <br>
+                東京都新宿区愛住町22 <br>
+                第三山田ビル2F <br>
+                <a href="https://maps.app.goo.gl/9w8d8GRpbjMSCd6G7" target="_blank">Google Maps</a>
+              </dd>
 
-              <dt></dt>
-              <dd></dd>
+              <dt>電話/FAX</dt>
+              <dd>03-1234-5678</dd>
+
             </dl>
           </div>
           <div>
