グローバルナビゲーションスタイルSPまで完成

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 <body>
 
   <header class="site-header">
+    <input type="checkbox" class="global-nav-toggler" id="global-nav-toggler">
+    <label for="global-nav-toggler" class="global-nav-btn">
+      <span>メニュー開閉</span>
+    </label>
     <nav class="global-nav">
       <ul>
         <li><a href="#news">お知らせ</a></li>
