メインビジュアルのカーブの作成

--- a/index.html
+++ b/index.html
@@ -31,11 +31,13 @@
       <p>日曜日の彩りを、今日も。</p>
     </div>
     <div class="mv">
-      <div><img src="img/top_01.jpg" alt=""></div>
-      <div><img src="img/top_02.jpg" alt=""></div>
-      <div><img src="img/top_03.jpg" alt=""></div>
-      <div><img src="img/top_04.jpg" alt=""></div>
-      <div><img src="img/top_05.jpg" alt=""></div>
+      <div class="mv__panel" style="--image: url(../img/top_01.jpg);">
+        <img src="img/top_01.jpg" alt="">
+      </div>
+      <div class="mv__panel"><img src="img/top_02.jpg" alt=""></div>
+      <div class="mv__panel"><img src="img/top_03.jpg" alt=""></div>
+      <div class="mv__panel"><img src="img/top_04.jpg" alt=""></div>
+      <div class="mv__panel"><img src="img/top_05.jpg" alt=""></div>
     </div>
   </header>
 
