MVまで作成完了

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Shippori+Mincho:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="js/slick/slick.css">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
@@ -34,10 +35,21 @@
       <div class="mv__panel" style="--image: url(../img/top_01.jpg);">
         <img src="img/top_01.jpg" alt="">
       </div>
-      <div class="mv__panel"><img src="img/top_02.jpg" alt=""></div>
-      <div class="mv__panel"><img src="img/top_03.jpg" alt=""></div>
-      <div class="mv__panel"><img src="img/top_04.jpg" alt=""></div>
-      <div class="mv__panel"><img src="img/top_05.jpg" alt=""></div>
+      <div class="mv__panel" style="--image: url(../img/top_02.jpg);">
+        <img src="img/top_02.jpg" alt="">
+      </div>
+      <div class="mv__panel" style="--image: url(../img/top_03.jpg);">
+        <img src="img/top_03.jpg" alt="">
+      </div>
+      <div class="mv__panel" style="--image: url(../img/top_04.jpg);">
+        <img src="img/top_04.jpg" alt="">
+      </div>
+      <div class="mv__panel" style="--image: url(../img/top_05.jpg);">
+        <img src="img/top_05.jpg" alt="">
+      </div>
+    </div>
+    <div class="scroll-indicator">
+      scroll
     </div>
   </header>
 
@@ -182,6 +194,9 @@
       <small class="copyright">&copy; sunday flower All Rights Reserved.</small>
     </div>
   </footer>
-  
+
+  <script src="js/jquery/jquery-3.7.1.min.js"></script>
+  <script src="js/slick/slick.min.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
