introductionのスタイリング完成

--- a/index.html
+++ b/index.html
@@ -57,7 +57,11 @@
     <section class="introduction">
       <div class="container introduction__container">
         <div class="introduction__text">
-          <h2 class="introduction__head" >私たちは東京都新宿区「曙橋駅」にある、町のお花屋さんです。</h2>
+          <h2 class="introduction__head" >
+            私たちは東京都新宿区<br>
+            「曙橋駅」にある、<br>
+            町のお花屋さんです。
+          </h2>
           <p class="introduction__lead">お花や鉢物の他、日持ちするプリザーブドフラワーや石鹸で出来たソープフラワー、園芸用品や花瓶などの雑貨も取り扱っております。<br>
           大切な贈り物はもちろん、切り花１輪から是非ご相談ください。<br>
           スタッフ一同、心よりお待ちしております。</p>
