ニュースセクションまで完成

--- a/index.html
+++ b/index.html
@@ -83,19 +83,19 @@
       <div class="container">
         <h2 class="section__head">お知らせ</h2>
         <ul class="news__list">
-          <li>
+          <li data-aos="zoom-out" data-aos-duration="500">
             <a href="#">
               <img src="img/news01.jpg" alt="">
               <p>お花教室のご案内</p>
             </a>
           </li>
-          <li>
+          <li data-aos="zoom-out" data-aos-delay="400" data-aos-duration="500">
             <a href="#">
               <img src="img/news02.jpg" alt="">
               <p>6月のキャンペーン</p>
             </a>
           </li>
-          <li>
+          <li data-aos="zoom-out" data-aos-delay="800" data-aos-duration="500">
             <a href="#">
               <img src="img/news03.jpg" alt="">
               <p>営業時間について</p>
