今月のお花教室まで完成

--- a/index.html
+++ b/index.html
@@ -125,7 +125,9 @@
               色々な告知や、教室の雰囲気、イベントレポートなどは随時ブログにて！<br>
               ぜひ、お店に遊びに来てくださいね。</p>
             </article>
-            <a href="#" class="btn btn-primary">お店のブログはこちら</a>
+            <div class="event__btn-area">
+              <a href="#" class="btn btn-primary">お店のブログはこちら</a>
+            </div>
           </div>
           <div>
             <article class="event-article">
